# routes-monitor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: routes.example.json  routes.json
output/: routes_map.html  routes_map.json
scripts/: plot_routes.py
src/routes_monitor/: __init__.py  cli.py  key_manager.py  monitor.py
tests/: test_monitor.py
